Fix looks on mobile

--- a/frontend-react/public/static/assets/css/material-bootstrap-wizard.css
+++ b/frontend-react/public/static/assets/css/material-bootstrap-wizard.css
@@ -30,7 +30,7 @@ h3{
     margin-top:3% !important;
 }
 .ref_link{
-    font-size: larger;
+    font-size: large;
     margin-bottom: 4%;
 }
 .container{
@@ -65,6 +65,13 @@ li{
     width: 24%;
     margin:auto;
 }
+
+@media only screen and (max-width: 1000px) {
+    .col-sm-4{
+        width: 100%;
+    }
+  }
+
 .bold{
     font-weight: bold !important;
     
